test/Errors/cannot_infer_hole.elab
Theorem bad_hole : Prop := _